mv kits to toothless

--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-native": "^0.22.2"
-  }
+
+  },
+  "devDependencies": {
+    "react-native-cli": "*"
+  },
+  "license": "BSD"
 }
