--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "react": "^0.14.7",
-    "react-native": "^0.22.2"
-
+    "react-native": "^0.22.2",
+    "react-native-vector-icons": "*"
   },
   "devDependencies": {
     "react-native-cli": "*"
